<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.add.AddFragment"
    >

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="70dp"
        android:fillViewport="true"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/topic_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/sideMargin"
                android:layout_marginEnd="@dimen/sideMargin"
                android:hint="@string/topic"
                app:errorEnabled="true"
                app:hintTextAppearance="@style/CustomHint"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/topic_input"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:maxLines="1"
                    android:textSize="@dimen/input_text_size"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/date_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/date"
                app:errorEnabled="true"
                app:hintTextAppearance="@style/CustomHint"
                app:layout_constraintEnd_toEndOf="@id/topic_layout"
                app:layout_constraintStart_toStartOf="@id/topic_layout"
                app:layout_constraintTop_toBottomOf="@id/topic_layout"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/date_input"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:focusableInTouchMode="false"
                    android:textSize="@dimen/input_text_size"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/start_time_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20sp"
                android:hint="@string/start_time"
                app:errorEnabled="true"
                app:hintTextAppearance="@style/CustomHint"
                app:layout_constraintEnd_toStartOf="@id/end_time_layout"
                app:layout_constraintStart_toStartOf="@id/topic_layout"
                app:layout_constraintTop_toBottomOf="@id/date_layout"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/start_time_input"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:focusableInTouchMode="false"
                    android:textSize="@dimen/input_text_size"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/end_time_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/end_time"
                app:errorEnabled="true"
                app:hintTextAppearance="@style/CustomHint"
                app:layout_constraintEnd_toEndOf="@id/topic_layout"
                app:layout_constraintStart_toEndOf="@id/start_time_layout"
                app:layout_constraintTop_toTopOf="@id/start_time_layout"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/end_time_input"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:focusableInTouchMode="false"
                    android:textSize="@dimen/input_text_size"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/place_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/place"
                android:labelFor="@id/place_input"
                app:endIconMode="dropdown_menu"
                app:errorEnabled="true"
                app:hintTextAppearance="@style/CustomHint"
                app:layout_constraintEnd_toEndOf="@id/topic_layout"
                app:layout_constraintStart_toStartOf="@id/topic_layout"
                app:layout_constraintTop_toBottomOf="@id/start_time_layout"
                >

                <AutoCompleteTextView
                    android:id="@+id/place_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:textSize="@dimen/input_text_size"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/list_member"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="@id/topic_layout"
                app:layout_constraintStart_toStartOf="@id/topic_layout"
                app:layout_constraintTop_toBottomOf="@id/place_layout"
                tools:listitem="@layout/list_item_member"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginBottom="@dimen/fab_margin"
        android:text="@string/add_meeting"
        android:textSize="@dimen/normal_text_size"
        />
</androidx.coordinatorlayout.widget.CoordinatorLayout>