<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:hint="@string/member"
        android:labelFor="@id/email_input"
        app:endIconMode="dropdown_menu"
        app:errorEnabled="true"
        app:hintTextAppearance="@style/CustomHint"
        app:layout_constraintEnd_toStartOf="@id/add_member"
        app:layout_constraintStart_toStartOf="parent"
        >

        <AutoCompleteTextView
            android:id="@+id/email_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:textSize="@dimen/input_text_size"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/add_member"
        android:layout_width="@dimen/small_icon_size"
        android:layout_height="@dimen/small_icon_size"
        android:layout_marginStart="20dp"
        android:background="@drawable/ic_add"
        android:backgroundTint="@android:color/holo_green_dark"
        android:contentDescription="@string/add_button"
        app:layout_constraintBottom_toTopOf="@id/remove_member"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/email_layout"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        />

    <ImageView
        android:id="@+id/remove_member"
        android:layout_width="@dimen/small_icon_size"
        android:layout_height="@dimen/small_icon_size"
        android:background="@drawable/ic_remove"
        android:backgroundTint="@color/colorAccent"
        android:contentDescription="@string/remove_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/add_member"
        app:layout_constraintStart_toStartOf="@id/add_member"
        app:layout_constraintTop_toBottomOf="@id/add_member"
        />
</androidx.constraintlayout.widget.ConstraintLayout>