<resources>
    <!-- Title -->
    <string name="app_name">Ma réu</string>
    <string name="new_meeting">New meeting</string>
    <string name="filter">Filter</string>

    <!-- TextInputLayout hint -->
    <string name="topic">Topic</string>
    <string name="fromDate">From date</string>
    <string name="untilDate">Until date</string>
    <string name="date">Date</string>
    <string name="fromTime">From time</string>
    <string name="untilTime">Until time</string>
    <string name="start_time">Start time</string>
    <string name="end_time">End time</string>
    <string name="place">Place</string>
    <string name="member">Member</string>

    <!-- TextInputLayout error-->
    <string name="required_field_error">Required</string>
    <string name="occupied_error">Occupied</string>
    <string name="incorrect_start_error">Is not before %s</string>
    <string name="incorrect_end_error">Is not after %s</string>
    <string name="time_place_error">Occupied that day between %s and %s</string>
    <string name="time_member_error">Is busy from %s to %s</string>

    <!-- View text -->
    <string name="no_meeting">No meeting to show</string>
    <string name="start_and_end_time">%s - %s - %s</string>
    <string name="add_meeting">Add the meeting</string>

    <!-- View content description -->
    <string name="meeting_place">Meeting image</string>
    <string name="add_button">Add button</string>
    <string name="remove_button">Remove button</string>
</resources>