...
        android:textColor="@android:color/black"
        android:textSize="@dimen/normal_text_size"
        app:layout_constraintBottom_toBottomOf="@id/image"
        app:layout_constraintEnd_toEndOf="@id/topic"
        app:layout_constraintStart_toStartOf="@id/topic"
        app:layout_constraintTop_toBottomOf="@id/date_and_time"
        tools:text="maxime@lamzone.com, alex@lamzone.com"
        />

    <ImageButton
        android:id="@+id/delete_meeting"
        android:layout_width="@dimen/icon_size"
        android:layout_height="@dimen/icon_size"
...
